--- a/assets/css/lightbox.css
+++ b/assets/css/lightbox.css
@@ -107,6 +107,19 @@
     border: 0;
     display: block;
 }
+#lightbox #title {
+    width: auto;
+    position: fixed;
+    z-index: 99;
+    bottom: 50px;
+    color: white;
+}
+#lightbox #title span {
+    vertical-align: top;
+    display: inline-block;
+    height: 45px;
+    padding: 10px 20px;
+}
 #lightbox #prev, #lightbox #next {height: 50px; line-height: 36px; display: none; margin-top: -25px; position: fixed; top: 50%; padding: 0 15px; cursor: pointer; text-decoration: none; z-index: 99; color: white; font-size: 60px;}
 #lightbox.gallery #prev, #lightbox.gallery #next {display: block;}
 #lightbox #prev {left: 0;}
